# twitch-archiver

./: .dockerignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements.txt  twitch-archiver.py  twitch-vod-archiver.py  twitch-vod-archiver.sh  variables.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  other.md
.github/workflows/: pypi-publish-on-release.yml  python-publish-develop.yml  python-publish-master.yml
src/: __init__.py  api.py  arguments.py  configuration.py  database.py  downloader.py  exceptions.py  logger.py  processing.py  stream.py  twitch.py  twitch_auth.py  utils.py  vod_database_connect.py
tests/integration/: test_chat.py  test_video.py
tests/unit/: test_arguments.py  test_channel.py  test_vod.py
twitcharchiver/: __init__.py  api.py  arguments.py  channel.py  configuration.py  database.py  downloader.py  exceptions.py  logger.py  processing.py  stream.py  twitch.py  utils.py  vod.py
twitcharchiver/downloaders/: chat.py  highlight.py  realtime.py  stream.py  video.py
